<resources>
    <string name="app_name">MovieBlockbuster</string>
    <string name="playing_now">Movies airing currently in the theaters</string>
    <string name="popular_movies">Popular movies at the moment</string>
    <string name="top_playing">Top Playing Movies</string>
    <string name="upcoming_movies">Upcoming movies to look out for</string>
    <string name="top_shows_airing">Top Shows Airing Today</string>
    <string name="tv_shows_on_the_air">TV shows On The Air</string>
    <string name="popular_right_now">Popular Right Now</string>
    <string name="top_rated_tv_shows">Top Rated TV shows</string>
    <string name="search_here_for_shows_or_movies">Search here for shows or movies</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="click_here">Click Here</string>
</resources>