<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginStart="45dp"
        android:text="@string/playing_now"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:visibility="visible"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"
        android:text="@string/popular_movies"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="23sp"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginStart="100dp"
        android:text="@string/top_playing"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginStart="45dp"
        android:text="@string/upcoming_movies"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:visibility="invisible"/>









</androidx.constraintlayout.widget.ConstraintLayout>