<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="10dp"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp"
    android:id="@+id/signIn">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/dark_gray"
        android:textStyle="bold"
        android:textSize="30sp" />
    <!--    User info fields-->
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_box"
        android:layout_marginTop="40dp"
        android:layout_gravity="center">
        <!--        email address-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_in_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:boxBackgroundMode="outline"
            android:layout_gravity="center"
            app:boxStrokeColor="@color/dark_gray">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                android:hint="@string/email_address"
                android:textColorHint="@color/dark_gray"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--        password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_in_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:boxBackgroundMode="outline"
            android:layout_gravity="center"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="@color/dark_gray">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/dark_gray"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/create_account_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/gray"
            android:text="Sign In"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="60dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <!-- Static Text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColorHint="@color/gray"
                android:textColor="@color/black" />
            <!-- Clickable "Sign In" Text -->
            <TextView
                android:id="@+id/sign_up_redirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_here"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>